# fuzzle

./: .bumpversion.cfg  .gitignore  README.md  make.sh  setup.py
fuzzle/docs/format/: uzl_format.h
fuzzle/duzzle/: __main__.py
fuzzle/duzzle/archs/: x86_64.py
fuzzle/duzzle/core/: context.py  listener.py  utils.py
fuzzle/duzzle/tests/: test_context.py
fuzzle/puzzle/: CMakeLists.txt
fuzzle/puzzle/include/: miniz.c  puzzle.h
fuzzle/puzzle/src/: CMakeLists.txt  main.c  pack_test.c  puzzle.c  puzzle_mem.c  puzzle_pack.c  puzzle_packing.c  puzzle_reg.c  puzzle_unpack.c  puzzle_utils.c  unpack_test.c
fuzzle/puzzle/tests/: packed.uzl
fuzzle/pypzl/: __init__.py  context.py
fuzzle/uuzzle/: CMakeLists.txt
fuzzle/uuzzle/cmake/: FindCapstone.cmake  FindFuzzle.cmake  FindUnicorn.cmake
fuzzle/uuzzle/examples/: README.md
fuzzle/uuzzle/examples/hello_world/: hello_world.uzl
fuzzle/uuzzle/examples/hello_world/src/: Makefile  hello_world  hello_world.c
fuzzle/uuzzle/examples/http_example/: server.uzl  server_child.uzl
fuzzle/uuzzle/include/: examples.h  linux_x86_64.h  uuzzle.h
fuzzle/uuzzle/src/: CMakeLists.txt  core.c  example000.c
fuzzle/uuzzle/src/arch/: CMakeLists.txt  x86_64.c
fuzzle/uuzzle/src/examples/: CMakeLists.txt  example000_emulator.c  example001_emulator.c
fuzzle/uuzzle/src/syscalls/: CMakeLists.txt  linux_x86_64.c
